<resources>
    <string name="app_name">Life24h</string>
    <string name="login">login</string>
    <string name="API_KEY" translatable="false">AIzaSyBHM6v08NNSg-p140FWLb_wEMcsAt2gVAg</string>
    <string name="API_GOOGLE_MAP" translatable="false">AIzaSyDmtst1HxzRXyf06tkM8hB2uEdNr46ym6Q</string>
    <string name="Key_Banner" translatable="false">ca-app-pub-6155136187617479/4616285980</string>
    <string name="Key_Interstitial" translatable="false">ca-app-pub-6155136187617479/8172387615</string>
    <string name="APPLICATION_ID_AD" translatable="false">ca-app-pub-6155136187617479~1060184350</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="Don_not_have_an_account">Don\'t have an account?</string>
    <string name="Register">Register</string>
    <string name="Already_have_an_account">Already have an account?</string>
    <string name="User_name">User name</string>
    <string name="New_children">New children</string>
    <string name="Last_updated">Last updated:</string>
    <string name="Logout">Logout</string>
    <string name="Hi">Hi!</string>
    <string name="Do_you_want_to_log_out">Do you want to log out?</string>
    <string name="Update_Error">Update error, try again later</string>
    <string name="Update_successful">Update successful!</string>
    <string name="Remove_successful">Remove successful!</string>
    <string name="Remove_error">Remove error!</string>
    <string name="Leaving_group_failed">Leaving group failed!</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Copied_to_Clipboard">Copied to Clipboard</string>
    <string name="Loading">Loading!</string>
    <string name="Phone_number">Phone number</string>
    <string name="Gender1">Gender:</string>
    <string name="Female">Female</string>
    <string name="Male">Male</string>
    <string name="Other">Other</string>
    <string name="Choose_avatar">Choose avatar</string>
    <string name="permission_don_not_granted">Permission don\'t granted and don\'t show dialog again</string>
    <string name="Continue">Continue</string>
    <string name="Success">Success</string>
    <string name="Failed">Failed</string>
    <string name="The_value_is_not_valid">The value is not valid</string>
    <string name="Password_incorrect">Password incorrect</string>
    <string name="Password_is_not_empty">Password is not empty</string>
    <string name="Password_is_at_least_6_characters">Password is at least 6 characters</string>
    <string name="Confirm_password_is_not_empty">Confirm password is not empty</string>
    <string name="Invalid_email">Invalid email</string>
    <string name="Email_is_not_empty">Email is not empty</string>
    <string name="Registration_failed">Registration failed!</string>
    <string name="Email_already_exists">Email already exists!</string>
    <string name="Login_failed">Login failed! Please check the value.</string>
    <string name="sent_photos">&#160;sent the photo</string>
    <string name="Logged_out_successfully">Logged out successfully!</string>
    <string name="Error_Please_restart_the_application">Error! Please restart the application</string>
    <string name="Sign_in_with_google">Sign in with Google</string>
    <string name="Details_of_the_chat">Details of the chat</string>
    <string name="or">or</string>
    <string name="Enter_the_message">Enter the message.</string>
    <string name="You_are_in_this_family">You are in this family, cannot join!</string>
    <string name="No_invitation_code_found">No invitation code found!</string>
    <string name="Successfully_joined">Successfully joined!</string>
    <string name="Uploaded_avatar_failed">Uploaded avatar failed!</string>
    <string name="Successfully_updated">Successfully updated!</string>
    <string name="Failed_to_update_family_name">Failed to update family name!</string>
    <string name="Update_failed">Update failed!</string>
    <string name="accessibility_title">Enable accessibility</string>
    <string name="accessibility_message_settings">Prevent the application stopped When Reboot. And Accessibility is useful for several features of the application (instant messaging, application blocking and website history).</string>
    <string name="accessibility_description">Accessibility Service</string>
    <string name="accessibility_ok">GO</string>
    <string name="accessibility_no">Cancel</string>
    <string name="accessibility_message_settings_bis">"Instructions:"</string>
    <string name="app_name_accessibility">SafeAreasForChildren</string>
    <string name="securite_policy">Enabling device administrator to prevent the close of the application, to block the phone and erase all data remotely.</string>
    <string name="Upload_a_photo">Upload a photo</string>
    <string name="Take_a_photo">Take a photo</string>
    <string name="Done">Done</string>
    <string name="Close">Close</string>
    <string name="Error_taking_photos">Error taking photos please try again later</string>
    <string name="Chat_group_name">Chat group name</string>
    <string name="selected">selected</string>
    <string name="Other_pictures1">Other pictures:</string>
    <string name="The_name_of_the_chat">The name of the chat</string>
    <string name="Members_list">Members list</string>
    <string name="Add_members">Add members</string>
    <string name="Save">Save</string>
    <string name="Select_members">Select members</string>
    <string name="ok">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="Create_family">Create family</string>
    <string name="Confirm_password">Confirm password</string>
    <string name="Edit_the_name_of_the_chat">Edit the name of the chat</string>
    <string name="Enter_the_name_of_the_chat">Enter the name of the chat</string>
    <string name="Common_name">Common name</string>
    <string name="Invite_code">Invite code</string>
    <string name="you_want_exit_app">You want to exit the application?</string>
    <string name="you_want_edit_place_app">Do you want to save the changes?</string>
    <string name="Remove_members">Remove members</string>
    <string name="Do_you_want_to_leave_the_group">Do you want to leave the group?</string>
    <string name="You_want_to_remove_members">You want to remove members?</string>
    <string name="You_want_to_sign_out">You want to sign out?</string>
    <string name="YES">YES</string>
    <string name="NO">NO</string>
    <string name="People">People</string>
    <string name="Places">Places</string>
    <string name="Safety">Safety</string>
    <string name="Settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Sign_out">Sign out</string>
    <string name="Message">Message</string>
    <string name="place_detail">PLACE DETAIL</string>
    <string name="Unknown">Unknown</string>
    <string name="More">More</string>
    <string name="Leave_group">Leave group</string>
    <string name="New_chat">New chat</string>
    <string name="Search_by_name">Search by name</string>
    <string name="New_message">New message</string>
    <string name="New_group">New group</string>
    <string name="Chat">Chat</string>
    <string name="move_place">  Move the map to select a place</string>
    <string name="suggestion_invite">Invite more members to your family with the invitation code: %s </string>
    <string name="This_is_my_family_invitation_code">This is my family invitation code:</string>
    <string name="Weekly_Driver_Report">Weekly Driver Report</string>
    <string name="Average_speed">Average speed</string>
    <string name="Top_speed">Top speed</string>
    <string name="See_more_driving_insights">See more driving insights</string>
    <string name="family_places">Family Places</string>
    <string name="add_place">+Add Place</string>
    <string name="add_place1">Add Place</string>
    <string name="delete_place">Delete Place</string>
    <string name="Create_a_successful_family">Create a successful family!</string>
    <string name="Failed_family_creation">Failed family creation!</string>
    <string name="You_have_created_more_than_the_specified_number">You have created more than the specified number (Up to 5 families)!</string>
    <string name="Emergency_contacts">Emergency contacts</string>
    <string name="Successful_message_reply">Successful message reply!</string>
    <string name="Reply_message_failed">Reply message failed!</string>
    <string name="Could_not_find_the_invite_code">Could not find the invite code</string>
    <string name="Invalid_invitation_code">Invalid invitation code! (Invitation code of 6 letters and numbers)</string>
    <string name="You_have_been_removed_from_the_chat">You have been removed from the chat!</string>
    <string name="title_bar_place_alert">Edit Place</string>
    <string name="All_driving_insights">All driving insights</string>
    <string name="no_data_to_display">No data to display</string>
    <string name="Invite_code_optional">Invite code (optional)</string>
    <string name="Edit_profile">Edit profile</string>
    <string name="Join_other_families">Join other families</string>
    <string name="Invite_friends">Invite friends</string>
    <string name="Share_this_invitation_code_with_people_you_want_to_invite_to_join_your_family">Share this invitation code with people you want to invite to join your family:</string>
    <string name="Share_your_code_out_loud_or_send_it_in_a_message">Share your code out loud or send it in a message</string>
    <string name="Send_Code">Send Code</string>
    <string name="family_name">Family name</string>
    <string name="Invalid_family_name">Invalid family name!</string>
    <string name="Invalid_name">Invalid name!</string>
    <string name="Invalid_phone_number">Invalid phone number!</string>
    <string name="Add_place">Add place</string>
    <string name="Edit_place">Edit place</string>
    <string name="Save_place">Save Changes</string>
    <string name="map_type">Map type</string>
    <string name="normal">Normal</string>
    <string name="terrain">Terrain</string>
    <string name="satellite">Satellite</string>
    <string name="Join_the_family">Join the family</string>
    <string name="Enter_the_invite_code">Enter the invite code</string>
    <string name="Get_the_code_from_the_person_setting_up_your_family_s">Get the code from the person setting up your family\'s</string>
    <string name="submit">Submit</string>
    <string name="ft_zone">ft zone</string>
    <string name="gps_turn_on">GPS Status: Turned On</string>
    <string name="battery">Battery: </string>
    <string name="last_since">Last Since: </string>
    <string name="current_location">Current Location: </string>
    <string name="gps_turn_off">GPS Status: Turned Off</string>
    <string name="Family_name">Family name</string>
    <string name="Remove_current_avatar">Remove current avatar</string>
    <string name="My_family">My family</string>
    <string name="Home">Home</string>
    <string name="wifi_turn_on">Network status: Online</string>
    <string name="we_will_send_your_emergency_notice_to_family_members_once_the_countdown_is_over">We will send your emergency notice to family members once the countdown is over.</string>
    <string name="_1">1</string>
    <string name="life24h_premium">Life24h Premium</string>
    <string name="_1_99">$1.99</string>
    <string name="limited_time_promotion">Limited-time promotion 50% off on monthly subscriptions to Unlock Life24h. Standard price is $3.99. <b>Pay only $1.99 on Google Play today</b></string>
    <string name="monthly_subscription">Monthly subscription</string>
    <string name="Forgot_password">Forgot password?</string>
    <string name="Upgrade_now">Upgrade now</string>
    <string name="After_the_upgrade_you_will_not_be_bothered_by_any_ads">After the upgrade you will not be bothered by any ads</string>
</resources>