<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  Date created: 02/11/2020
  ~  Last updated: 02/11/2020
  ~  Name project: life24h
  ~  Description:
  ~  Auth: trong.le@1byte.com
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F2F3"
    android:fillViewport="true"
    tools:context=".Views.UIWellcome.UIUpgradePremium">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_alignParentTop="true"
            android:layout_above="@id/adView"
            android:layout_width="match_parent"
            android:paddingBottom="10dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:background="#482D79"
                    android:layout_marginLeft="20dp"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="40dp"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="match_parent"
                        android:text="@string/life24h_premium"
                        android:textColor="#fff"
                        android:textStyle="bold"
                        android:textSize="21sp"
                        android:layout_marginStart="20dp"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:text="@string/_1_99"
                        android:textColor="#fff"
                        android:textStyle="bold"
                        android:textSize="31sp"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="20dp"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:text="@string/monthly_subscription"
                        android:textColor="#fff"
                        android:textSize="17sp"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="20dp"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="20dp"
                    android:textColor="#000"
                    android:textSize="20sp"
                    android:layout_marginTop="20dp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:text="@string/After_the_upgrade_you_will_not_be_bothered_by_any_ads"
                    android:layout_height="wrap_content"/>


                <Button
                    android:layout_width="match_parent"
                    android:background="@drawable/bg_button_subscribe"
                    android:layout_marginStart="35dp"
                    android:layout_marginEnd="35dp"
                    android:textSize="17sp"
                    android:textAllCaps="false"
                    android:id="@+id/btn_Subscribe_App"
                    android:textColor="#fff"
                    android:text="@string/Upgrade_now"
                    android:layout_marginTop="30dp"
                    android:layout_height="45dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_marginStart="35dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/limited_time_promotion"
                    android:layout_height="match_parent"/>

            </LinearLayout>

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="80dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/sales"
                android:layout_gravity="right"
                android:layout_marginEnd="30dp"
                android:layout_height="80dp"/>
        </FrameLayout>

        <com.google.android.gms.ads.AdView
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            ads:adSize="LARGE_BANNER"
            ads:adUnitId="@string/Key_Banner"/>

    </RelativeLayout>




</ScrollView>