<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.UILogin">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_marginBottom="20dp"
                android:background="@drawable/top_login"
                android:layout_width="match_parent"
                android:layout_height="240dp">

                <ImageView
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/icon_life24h_vs3"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content" />

            </RelativeLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:id="@+id/tilEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:inputType="textEmailAddress"
                    android:hint="@string/Email"
                    android:textSize="15sp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:id="@+id/tilPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.maksim88.passwordedittext.PasswordEditText
                    android:inputType="textPassword"
                    android:hint="@string/Password"
                    android:textSize="15sp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:visibility="gone"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/ic_error_red_18dp"
                android:layout_marginStart="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Error login"
                android:id="@+id/tvError"
                android:textSize="12sp"
                android:textColor="@color/red" />

            <Button
                android:layout_marginBottom="3dp"
                android:layout_marginTop="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:id="@+id/btnLogin"
                android:background="@drawable/bg_button_login"
                android:text="@string/login"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvForgotPassword"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Forgot_password"
                android:textStyle="bold"
                android:textColor="@color/colorThemeBlue"/>

            <LinearLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Don_not_have_an_account"
                    android:textColor="@color/colorTextLight"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Register"
                    android:id="@+id/tvRegister"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginStart="5dp"
                    android:textColor="@color/colorThemeBlue" />

            </LinearLayout>

            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textColor="@color/colorTextLight"/>

            <Button
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_google"
                android:layout_gravity="center"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:id="@+id/btnSignInWithGoogle"
                android:background="@drawable/bg_button_white"
                android:text="@string/Sign_in_with_google"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="40dp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>




</LinearLayout>
