<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  Date created: 02/04/2020
  ~  Last updated: 02/04/2020
  ~  Name project: life24h
  ~  Description:
  ~  Auth: James Ryan
  -->

<RelativeLayout
    android:background="@drawable/gradient_master_card"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.UIEmergencyAssistance.UIEmergencyAssistance">

    <TextView
        android:layout_marginTop="100dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/we_will_send_your_emergency_notice_to_family_members_once_the_countdown_is_over"
        android:textSize="17sp"
        android:textColor="@color/white" />

    <TextView
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1"
        android:id="@+id/tvTime"
        android:textSize="70sp"
        android:textStyle="bold"
        android:textColor="@color/white" />

    <Button
        android:background="@color/colorTransparent"
        android:layout_marginBottom="40dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Cancel"
        android:id="@+id/btnCancel"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white" />

</RelativeLayout>