<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  Date created: 12/31/2019
  ~  Last updated: 12/31/2019
  ~  Name project: life24h
  ~  Description:
  ~  Auth: James Ryan
  -->

<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.UISettings.UIInviteFriends">
    <androidx.appcompat.widget.Toolbar
        app:title="@string/Invite_code"
        android:id="@+id/toolbar"
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
    </androidx.appcompat.widget.Toolbar>
    
    <View
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorLine"/>
    
    <androidx.core.widget.NestedScrollView
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_above="@id/adView"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_marginTop="50dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Share_this_invitation_code_with_people_you_want_to_invite_to_join_your_family"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <TextView
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:background="@drawable/gradient_telegram"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="XXXXXX"
                    android:id="@+id/tvInviteCode"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_marginStart="70dp"
                    android:layout_marginEnd="70dp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Share_your_code_out_loud_or_send_it_in_a_message"
                    android:textSize="14sp"
                    android:textColor="@color/colorTextLight" />

                <Button
                    android:layout_marginStart="3dp"
                    android:layout_marginEnd="3dp"
                    android:layout_marginBottom="3dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center"
                    android:id="@+id/btnSendCode"
                    android:background="@drawable/bg_button_continue"
                    android:text="@string/Send_Code"
                    android:textColor="@color/white"
                    android:textAllCaps="false"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="37dp"/>

            </LinearLayout>

            <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                ads:adSize="MEDIUM_RECTANGLE"
                ads:adUnitId="@string/Key_Banner"/>

        </RelativeLayout>

        
    </androidx.core.widget.NestedScrollView>
    
</LinearLayout>