<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  Date created: 12/18/2019
  ~  Last updated: 12/18/2019
  ~  Name project: life24h
  ~  Description:
  ~  Auth: James Ryan
  -->

<LinearLayout android:paddingTop="?attr/actionBarSize"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:weightSum="3"
    android:layout_height="match_parent"
    tools:context=".Views.PlacesFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:fillViewport="true"
        android:background="@color/colorMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:elevation="10dp"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:cardCornerRadius="5dp"
                android:layout_margin="5dp">
                <ImageView
                    android:layout_width="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/background_top_places"
                    android:layout_height="match_parent"/>

            </androidx.cardview.widget.CardView>


            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_centerVertical="true"
                        android:layout_alignParentStart="true"
                        android:layout_width="wrap_content"
                        android:text="@string/family_places"
                        android:textStyle="bold"
                        android:paddingStart="10dp"
                        android:textSize="18sp"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:paddingStart="10dp"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/bg_button_white_border"
                        android:layout_centerVertical="true"
                        android:layout_alignParentEnd="true"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:text="@string/add_place"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:id="@+id/btn_AddPlaceAlert"
                        android:textColor="@color/colorThemeBlue"
                        android:paddingEnd="10dp"
                        android:gravity="end"
                        android:layout_height="wrap_content"/>

                </RelativeLayout>

                <com.google.android.gms.ads.AdView
                    xmlns:ads="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/adView"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    ads:adSize="BANNER"
                    ads:adUnitId="@string/Key_Banner"/>

                <com.family.life24h.CustomView.NonScrollRecyclerView
                    android:layout_width="match_parent"
                    android:paddingTop="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="10dp"
                    android:id="@+id/rcl_PlaceAlert"
                    android:layout_height="match_parent"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>